crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_system_dbl_quote_u0009.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa SYSTEM\"\t\"####)"
---
[
    Token {
        data: "DOCTYPEa SYSTEM\"\t",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
